Adicionando Container de Dependencia.

--- a/PDV_MVC.dproj
+++ b/PDV_MVC.dproj
@@ -4,7 +4,7 @@
         <ProjectVersion>20.1</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Release</Config>
+        <Config Condition="'$(Config)'==''">Debug</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <ProjectName Condition="'$(ProjectName)'==''">PDV_MVC</ProjectName>
         <TargetedPlatforms>3</TargetedPlatforms>
@@ -158,6 +158,7 @@
             <Form>FrmListaDados</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="source\utils\impl\pdvmvc.dependencycontainer.utils.impl.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -181,6 +182,12 @@
             </Delphi.Personality>
             <Deployment Version="4">
                 <DeployFile LocalName="Win32\Debug\PDV_MVC.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>PDV_MVC.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win32\Release\PDV_MVC.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>PDV_MVC.exe</RemoteName>
                         <Overwrite>true</Overwrite>
